--- a/models/pyproject.toml
+++ b/models/pyproject.toml
@@ -12,7 +12,7 @@ fastapi = "^0.68.0"
 PyJWT = "^2.3.0"
 kubernetes = "^19.15.0"
 SQLAlchemy = "1.3.23"
-psycopg2-binary = "2.9.2"
+psycopg2-binary = "^2.9"
 alembic = "^1.7.6"
 python-dotenv = "^0.19.2"
 boto3 = "^1.21.23"
@@ -31,7 +31,7 @@ types-paramiko = "^2.8.19"
 flake8 = "^4.0.1"
 commitizen = "^2.27.0"
 types-requests = "^2.27.25"
-SQLAlchemy-Utils = "0.39.0"
+SQLAlchemy-Utils = "^0.38"
 
 [tool.isort]
 profile = "black"
