--- a/processing/pyproject.toml
+++ b/processing/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["user <user@email.com>"]
 
 [tool.poetry.dependencies]
-python = "3.8.10"
+python = "^3.8.10"
 fastapi = "^0.75.1"
 uvicorn = "^0.17.6"
 numpy = "^1.22.3"
